# aitown

./: .gitignore  README.md  npcs.json  player_api_configs.json  pyproject.toml  tsconfig.json
backend/: config.toml  pyproject.toml
backend/config/: static_data.yaml
backend/migrations/: 0001_init.sql
backend/src/aitown/: db.py
backend/src/aitown/helpers/: config_helper.py  currency_helper.py  db_helper.py  init_db.py  llm_helper.py  path_helper.py  paths.py  static_data_helper.py
backend/src/aitown/kernel/: __init__.py  event_bus.py  npc_actions.py  runtime.py  sim_clock.py
backend/src/aitown/models/: effect_model.py  event_model.py  interface.py  item_model.py  memory_entry_model.py  npc_model.py  place_model.py  player_model.py  road_model.py  town_model.py
backend/src/aitown/repos/: __init__.py  base.py  effect_repo.py  event_repo.py  interfaces.py  item_repo.py  memory_repo.py  npc_repo.py  place_repo.py  player_repo.py  road_repo.py  town_repo.py  transactions_repo.py
backend/src/aitown/services/: event_service.py  npc_service.py  player_service.py  sim_service.py
backend/tests/: test_llm_helper.py
backend/tests/integration/: test_npc_action_sequence.py  test_two_npcs_4days.py
backend/tests/unit/: conftest.py  test_config_helper.py  test_db_helper.py  test_effect_repo.py  test_event_bus.py  test_event_repo_basic.py  test_helpers_init_db.py  test_interfaces_exec.py  test_item_repo_basic.py  test_memory_basic.py  test_npc_actions.py  test_npc_repo_basic.py  test_place_repo_basic.py  test_player_repo_basic.py  test_repos_misc.py  test_road_repo_basic.py  test_services_layer.py  test_sim_clock.py  test_transactions_repo_basic.py
backend/tests/unit/core/: test_event_bus.py  test_npc_actions.py
backend/tests/unit/helpers/: test_db_helper.py
backend/tests/unit/repos/: test_effect_repo.py  test_event_repo.py  test_item_repo.py  test_npc_repo.py  test_place_repo.py  test_player_repo.py  test_repos_misc.py  test_road_repo.py  test_town_repo.py
backend/tests/unit/services/: test_npc_register_decision_and_service.py  test_services_layer.py
backup/: README.backend.md  README.md  package-lock.json  package.json
docs/: PRD.md  architecture-decisions.md  architecture-fullstack.md  backlog.md  cohesion-report.md  db.md  design.md  epic-stories.md  epics.md  game-spec.md  prd.md  prd.md.bak  project-workflow-analysis.md  prompt-templates-readme.md  story-context-2.1.xml  story-context-A-01.xml  tech-spec.md  (+5 more)
(+129 files in other folders)
