[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "aitown-backend"
version = "0.1.0"
description = "Backend for AI Town project"
authors = [
    {name = "Egod", email = "egod@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "openai>=2.3.0",
    "loguru>=0.7.3",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html:htmlcov --cov-report=term-missing -q"
markers = [
    "integration: End-to-end integration tests verifying core action flows",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

# Use ruff to automatically remove unused imports as part of formatting workflow.
[tool.ruff]
line-length = 88
select = ["F401", "F403"]
fix = true

[tool.black]
line-length = 88
target-version = ["py313"]

[project.scripts]
